# codevira

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOGFOOD.md  FAQ.md  GEMINI.md  LICENSE  MANIFEST.in  MIGRATING.md  Makefile  PROTOCOL.md  README.md  RELEASE_NOTES.md  ROADMAP.md  SECURITY.md  codevira.discipline.yaml  config.example.yaml  journal.md  push.py  pyproject.toml  requirements.txt  test_incremental.py
.claude/: settings.json
.claude/hooks/: pre-release-block.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release-gate.yml
agents/: builder.md  documenter.md  orchestrator.md
agents/qa/: 01-code-review.md  02-adversarial-fix-review.md  03-cross-module-impact.md  06-doc-drift.md  07-security-audit.md  12-llm-redteam.md  13-multi-ide-schema.md  22-competitor-benchmark.md  README.md  tier2-scripts.md  tier3-manual.md
docs/: alpha-tester-invites.md  architecture.md  audit-2026-05-22.md  foolproof-product-charter.md  hn-launch-day.md  how-i-built-persistent-memory-for-ai-agents.md  local-pypi-https.md  morning-handoff-2026-05-22.md  qa-playbook.md  release-process.md  roadmap.md  surface-cuts-2026-05-22.md  v2-completion-plan.md  v2-execution-log.md  v2-master-plan.md  vs-other-memory-tools.md
docs/demo/: README.md  codevira-demo.webm  index.html  record.py
docs/heroes/: 00-engine.md  01-decision-lock.md  02-anti-regression.md  03-scope-contract.md  04-blast-radius.md  05-cross-session.md  06-token-budget.md  07-live-style.md  08-decision-replay.md  09-intent-inference.md  10-ai-promotion.md  README.md  pillar-1-setup.md
docs/plans/: opt-in-activation.md  v2.1.2.md  v2.1.3.md  v2.2.0.md  v3.0.0.md
docs/release-notes/: v3.1.1.md  v3.7.1.md
docs/troubleshooting/: antigravity.md  config-hygiene.md
graph/: _schema.yaml
hooks/: install-hooks.sh
inc_project/: test.py
inc_project/src/: main.py
indexer/: __init__.py  _dedupe_migration.py  _fork_safety.py  _sqlite_util.py  chunker.py  fix_history.py  global_db.py  graph_generator.py  index_codebase.py  outcome_classifier.py  outcome_tracker.py  rule_learner.py  sqlite_graph.py  treesitter_parser.py
mcp-server/: server.py
mcp-server/tools/: graph.py  playbook.py  roadmap.py  search.py
mcp_server/: __init__.py  __main__.py  _ghost_check.py  _mcp_registry.py  _project_inventory.py  _prompts.py  _repair_init.py  _safe_crash.py  agents_md.py  auto_init.py  cli.py  cli_agents.py  cli_budget.py  cli_calibrate.py  cli_configure.py  cli_consensus.py  cli_eval.py  cli_export.py  cli_graph.py  cli_hooks_admin.py  cli_induce.py  cli_init.py  cli_insights.py  cli_projects.py  cli_reflect.py  cli_repair.py  cli_replay.py  cli_search.py  cli_sync.py  cli_transfer.py  cli_uninstall.py  cli_working.py  crash_logger.py  decision_replay.py  detect.py  doctor.py  gitignore.py  global_sync.py  http_server.py  ide_inject.py  (+11 more)
mcp_server/data/: __init__.py  affordances.yaml  config.example.yaml
mcp_server/engine/: __init__.py  demo_policy.py  events.py  intent_classifier.py  memory_fanout.py  policy.py  promotion_score.py  runner.py  scope_contract.py  signals.py  token_meter.py
mcp_server/eval/: __init__.py  composite.py  judge.py  relevance.py  report.py  weight_tuner.py
mcp_server/graph/: template.html
mcp_server/ingest/: __init__.py  claude_code.py  codex.py  gemini.py  heuristics.py  models.py  scan.py
mcp_server/storage/: __init__.py  activity_store.py  agents_md_generator.py  atomic.py  config.py  consensus_store.py  decisions_store.py  digest.py  fts5_index.py  id_repair.py  jsonl_store.py  learned_weights.py  manifest.py  origin.py  outcomes_writer.py  paths.py  reconcile.py  reflections_store.py  sanitize.py  sessions_store.py  skills_store.py  synonyms.py  token_estimator.py  working_store.py
mcp_server/tools/: _decision_embeddings.py  changesets.py  check_conflict.py  code_reader.py  consensus.py  graph.py  learning.py  playbook.py  preferences.py  reflections.py  roadmap.py  search.py  skills.py  spatial.py  working.py
rules/: api-standards.md  cli-layout.md  git-cicd-governance.md  git_commits.md  incremental-updates.md  master_rule.md  persistence.md  resilience-observability.md
scripts/: chaos_smoke.py  check_real_ide_smoke.sh  cold_install_smoke.sh  system_test_agentstore.py  uninstall-codevira.sh
tests/: conftest.py  test__prompts.py  test_antigravity_hook_portable.py  test_auto_init.py  test_binding_e2e.py  test_call_edge_fk_safety.py  test_check_conflict.py  test_chunker.py  test_claude_binding_conflict.py  test_cli.py  test_cli_agents.py  test_cli_configure.py  test_cli_consensus.py  test_cli_export.py  test_cli_graph.py  test_cli_induce.py  test_cli_insights.py  test_cli_projects.py  test_cli_replay.py  test_cli_search.py  test_cli_transfer.py  test_cli_uninstall.py  test_cli_untrack.py  test_cli_version.py  test_cli_working.py  test_code_reader.py  test_committed_memory.py  test_consensus_handshake.py  test_crash_logger.py  test_cross_project_search.py  test_decision_embeddings.py  test_decisions_store.py  test_dedupe_migration.py  test_detect.py  test_doctor.py  test_e1_summary_first.py  test_eval_e3.py  test_fk_safety_extended.py  test_fork_safety.py  test_ghost_check.py  (+73 more)
tests/e2e/: test_cross_tool_universality.py  test_first_contact.py  test_product_invariants.py  test_qa_round_v2_completion.py  test_v2_release_candidate.py  test_v350_acceptance.py
tests/engine/: test_ai_promotion.py  test_anti_regression.py  test_antigravity_hooks.py  test_blast_radius.py  test_claude_native_memory.py  test_cross_session.py  test_decision_lock.py  test_decision_replay.py  test_diff_envelope.py  test_events.py  test_fix_history.py  test_integration.py  test_intent_inference.py  test_live_style.py  test_memory_fanout.py  test_policies.py  test_prompt_capture.py  test_qa_p0_fixes.py  test_qa_round3.py  test_qa_round4.py  test_qa_round5.py  (+13 more)
website/: docs.html  index.html  robots.txt  site.webmanifest  sitemap.xml
(+98 files in other folders)
