[build-system]
requires = ["setuptools>=68,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codevira"
version = "2.1.2"
description = "Stop re-explaining your project to AI agents every session. Codevira gives Claude Code, Cursor, Windsurf, and Antigravity shared persistent memory of your codebase — locally, no signup, MIT-licensed. One install configures every AI tool."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Sachin Shelke", email = "sachin.worldnet@gmail.com" }
]
requires-python = ">=3.10"
keywords = [
  "mcp",
  "model-context-protocol",
  "ai-agents",
  "llm",
  "developer-tools",
  "claude",
  "cursor",
  "windsurf",
  "code-intelligence",
  "semantic-search",
  "context-graph",
  "chromadb",
  "agentic",
  "coding-assistant",
  "knowledge-graph"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "pyyaml>=6.0",
  "mcp>=1.0.0",
  "watchdog>=3.0.0",
  "tree-sitter>=0.23.0",
  "tree-sitter-language-pack>=0.13.0,<1.0.0",
  "rich>=13.0.0",
  "uvicorn>=0.27.0",
  "starlette>=0.36.0",
  "pathspec>=0.12.0",
  # Semantic search — required so all 36 MCP tools work out of the box.
  # Adds ~500MB (includes ML runtime). Downloads ~90MB model on first use.
  # For a minimal install without semantic search, see:
  # https://github.com/sachinshelke/codevira#minimal-install
  "chromadb>=0.5.0",
  "sentence-transformers>=2.7.0",
]

[project.optional-dependencies]
# Kept as no-op aliases for backwards compatibility with `pip install codevira[search]`.
# Semantic search deps are now part of the base install.
search = []
all = []
# Dev dependencies for contributors. Installed via: pip install -e ".[dev]"
# Or use the Makefile target: make dev
# These power the discipline scaffold (Pillar 3): pre-commit, lint, type-check, e2e tests.
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "pytest-timeout>=2.1",
  "ruff>=0.6.0",
  "mypy>=1.10",
  "types-PyYAML",
  "pre-commit>=3.5",
]

[project.scripts]
codevira = "mcp_server.cli:main"

[project.urls]
Homepage = "https://github.com/sachinshelke/codevira"
Repository = "https://github.com/sachinshelke/codevira"
Issues = "https://github.com/sachinshelke/codevira/issues"
Changelog = "https://github.com/sachinshelke/codevira/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*", "indexer*"]

[tool.setuptools.package-data]
mcp_server = ["data/**/*", "data/*"]

[tool.pytest.ini_options]
# v2.1.2 hardening: register custom markers so pytest doesn't emit
# UnknownMarkWarning. `integration` is for the post-release-style
# round-trip / cold-install / sandboxed-parent suites under
# tests/integration — they're slower than unit tests and use real
# fixtures (graph.db, MCP dispatcher, subprocess).
markers = [
    "integration: end-to-end / dispatcher / wheel-install tests (slower; opt-in)",
]
