[build-system]
requires = ["setuptools>=68,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codevira"
version = "2.2.0"
description = "Cross-IDE decision enforcement for AI coding agents. 1 MB per project, in your repo, no cloud, no vectors. Claude Code, Cursor, Windsurf, Antigravity, Codex all share the same in-repo memory; hooks block AI tool calls that violate prior decisions. MIT, local-first."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Sachin Shelke", email = "sachin.worldnet@gmail.com" }
]
requires-python = ">=3.10"
keywords = [
  "mcp",
  "model-context-protocol",
  "ai-agents",
  "llm",
  "developer-tools",
  "claude",
  "cursor",
  "windsurf",
  "code-intelligence",
  "enforcement",
  "agents-md",
  "context-graph",
  "agentic",
  "coding-assistant",
  "knowledge-graph"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "pyyaml>=6.0",
  "mcp>=1.0.0",
  "watchdog>=3.0.0",
  "tree-sitter>=0.23.0",
  "tree-sitter-language-pack>=0.13.0,<1.0.0",
  "rich>=13.0.0",
  "uvicorn>=0.27.0",
  "starlette>=0.36.0",
  "pathspec>=0.12.0",
  # v2.2.0: chromadb / sentence-transformers / torch REMOVED. Decision
  # search uses SQLite FTS5 (stdlib). 200 MB pipx install → ~50 MB.
  # Code search isn't a codevira concern — AI agents grep + Read directly.
]

[project.optional-dependencies]
# Kept as no-op aliases so old `pip install codevira[search]` doesn't error.
# v2.2.0 has no optional semantic-search extras.
search = []
all = []
# Dev dependencies for contributors. Installed via: pip install -e ".[dev]"
# Or use the Makefile target: make dev
# These power the discipline scaffold (Pillar 3): pre-commit, lint, type-check, e2e tests.
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "pytest-timeout>=2.1",
  "ruff>=0.6.0",
  "mypy>=1.10",
  "types-PyYAML",
  "pre-commit>=3.5",
]

[project.scripts]
codevira = "mcp_server.cli:main"

[project.urls]
Homepage = "https://github.com/sachinshelke/codevira"
Repository = "https://github.com/sachinshelke/codevira"
Issues = "https://github.com/sachinshelke/codevira/issues"
Changelog = "https://github.com/sachinshelke/codevira/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*", "indexer*"]

[tool.setuptools.package-data]
mcp_server = ["data/**/*", "data/*"]

[tool.pytest.ini_options]
# v2.1.2 hardening: register custom markers so pytest doesn't emit
# UnknownMarkWarning. `integration` is for the post-release-style
# round-trip / cold-install / sandboxed-parent suites under
# tests/integration — they're slower than unit tests and use real
# fixtures (graph.db, MCP dispatcher, subprocess).
markers = [
    "integration: end-to-end / dispatcher / wheel-install tests (slower; opt-in)",
]
