[build-system]
requires = ["setuptools>=68,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codevira"
version = "3.1.1"
description = "Cross-IDE decision enforcement for AI coding agents. 1 MB per project, in your repo, no cloud, no vectors. Claude Code, Cursor, Windsurf, Antigravity, Codex all share the same in-repo memory; hooks block AI tool calls that violate prior decisions. MIT, local-first."
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Sachin Shelke", email = "sachin.worldnet@gmail.com" }
]
requires-python = ">=3.10"
keywords = [
  "mcp",
  "model-context-protocol",
  "ai-agents",
  "llm",
  "developer-tools",
  "claude",
  "cursor",
  "windsurf",
  "code-intelligence",
  "enforcement",
  "agents-md",
  "context-graph",
  "agentic",
  "coding-assistant",
  "knowledge-graph"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Build Tools",
]
dependencies = [
  "pyyaml>=6.0",
  "mcp>=1.0.0",
  "watchdog>=3.0.0",
  # tomllib is stdlib on 3.11+; tomli is the backport for the declared
  # 3.10 support (used to read pyproject.toml project name).
  "tomli>=2.0; python_version < '3.11'",
  "tree-sitter>=0.23.0",
  # v2.2.0: switched from tree-sitter-language-pack (351 MB, 17 grammars) to
  # individual grammar packages for the 4 most-used non-Python languages
  # (Python parsing uses stdlib `ast`). Total grammar footprint ~10-15 MB
  # instead of 351 MB — the v2.2.0 ≤55 MB pipx budget (G1) depends on it.
  # Long-tail languages (Java/C/C++/Ruby/PHP/Kotlin/Swift/Solidity) are
  # available as an opt-in extra: `pip install codevira[all-languages]`.
  "tree-sitter-typescript>=0.23.0",
  "tree-sitter-javascript>=0.23.0",
  "tree-sitter-go>=0.23.0",
  "tree-sitter-rust>=0.23.0",
  "rich>=13.0.0",
  "uvicorn>=0.27.0",
  "starlette>=0.36.0",
  "pathspec>=0.12.0",
  # v2.2.0: chromadb / sentence-transformers / torch REMOVED. Decision
  # search uses SQLite FTS5 (stdlib). 200 MB pipx install → ~50 MB.
  # Code search isn't a codevira concern — AI agents grep + Read directly.
]

[project.optional-dependencies]
# Kept as no-op aliases so old `pip install codevira[search]` doesn't error.
# v2.2.0+ has no optional semantic-search extras and no [all-languages]
# extra (the legacy tree-sitter-language-pack was removed along with the
# v2.1.x carryover user base). v2.3.0 may re-introduce specific
# long-tail grammars as individual deps if real demand emerges.
search = []
all = []
# Dev dependencies for contributors. Installed via: pip install -e ".[dev]"
# Or use the Makefile target: make dev
# These power the discipline scaffold (Pillar 3): pre-commit, lint, type-check, e2e tests.
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "pytest-timeout>=2.1",
  "ruff>=0.6.0",
  "mypy>=1.10",
  "types-PyYAML",
  "pre-commit>=3.5",
]

[project.scripts]
codevira = "mcp_server.cli:main"

[project.urls]
Homepage = "https://github.com/sachinshelke/codevira"
Repository = "https://github.com/sachinshelke/codevira"
Issues = "https://github.com/sachinshelke/codevira/issues"
Changelog = "https://github.com/sachinshelke/codevira/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_server*", "indexer*"]

[tool.setuptools.package-data]
mcp_server = ["data/**/*", "data/*", "graph/*.html"]

[tool.pytest.ini_options]
# v2.1.2 hardening: register custom markers so pytest doesn't emit
# UnknownMarkWarning. `integration` is for the post-release-style
# round-trip / cold-install / sandboxed-parent suites under
# tests/integration — they're slower than unit tests and use real
# fixtures (graph.db, MCP dispatcher, subprocess).
markers = [
    "integration: end-to-end / dispatcher / wheel-install tests (slower; opt-in)",
]
